--- a/principal.html
+++ b/principal.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Food Tracker</h1>
-        <button class="enter-button" onclick="window.location.href='login.html'">Entrar</button>
+        <button class="enter-button" onclick="window.location.href='upload.html'">Entrar</button>
     </div>
 </body>
 </html>
